--- a/index.html
+++ b/index.html
@@ -139,14 +139,19 @@
        
     </div>
 
-    <footer class="py-1 my-5">
-    <p class="text-center text-muted border-top pt-3 mt-3">
-        <a href="https://www.guga-araujo.dev.br/" 
-        target="_blank"
-        class="text-muted">www.guga-araujo.dev.br/</a>
-    </p>
+    <footer class="py-1 my-3">
+        <p class="text-center text-muted border-top pt-3 mt-3">
+            <a href="https://www.guga-araujo.dev.br/" 
+            target="_blank"
+            class="text-muted"><img src="img/logo_guga.png" class="logo_guga" alt="https://www.guga-araujo.dev.br/"></a>
+        </p>
+        <p class="text-center text-muted">
+            <a href="https://www.guga-araujo.dev.br/" 
+            target="_blank"
+            class="text-muted">www.guga-araujo.dev.br/</a>
+        </p>
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
         <a href="https://api.whatsapp.com/send?phone=5511971436057&text=Oi!%20Estou%20interessado%20nos%20equipamentos.%20Me%20chamo..." class="float" target="_blank">
             <i class="fa fa-whatsapp my-float"></i>
         </a>
@@ -157,15 +162,6 @@
 
     <!-- Bootstrap 5 -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-
-
-
-
-
-
-
-
-
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" 
