--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Laboratório Lótus - Próteses Dentárias. Protocolo, Aparelhos ortodônticos, Próteses Removíveis, Fixas e sobre Implante." />
+  <meta name="description" content="Venda de equipamentos de prótese dentária | usados" />
   <meta property="og:locale" content="pt_BR" />
 	<meta property="og:type" content="website" />
   <meta name="rating" content="general" />
   <meta property="og:url" content="https://www.laboratoriolotus.com.br" />
   <meta property="og:site_name" content="Laboratório Lótus" />
-  <meta property="og:title" content=" Lótus | Próteses Dentárias " />
+  <meta property="og:title" content=" Desapego | Laboratório Lótus " />
   <meta property="og:image" content="https://www.laboratoriolotus.com.br/img/meta.jfif" />
   <meta property="og:image:width" content="1080" />
 	<meta property="og:image:height" content="1080" />
